# syslog-forwarder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.dev  Makefile  README.md  config.example.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml
docs/: PRD-old.md  PRD.md  architecture.md  index.md  user-guide.md
init/: README.md
sandbox/grafana/provisioning/dashboards/: dashboards.yml  syslog-forwarder.json
sandbox/prometheus/: prometheus.yml
sandbox/syslog-ng-fwd/config/: syslog-ng.conf
sandbox/syslog-receiver/config/: syslog-ng.conf
src/syslog_fwd/: __init__.py  cli.py  config.py  export_syslogng.py  filters.py  forwarder.py  inputs.py  metrics.py  outputs.py  parser.py  transformer.py
tests/: __init__.py  test_config.py  test_export_syslogng.py  test_filters.py  test_parser.py  test_transformer.py
tests/perf/: config-perf.yaml  docker-compose.perf.yml  test_performance.py
