[project]
name = "syslog-fwd"
version = "0.1.0"
description = "Lightweight syslog forwarder with simple YAML configuration"
readme = "README.md"
authors = [
    { name = "brun_s" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.20.0",
]
keywords = ["syslog", "forwarder", "logging", "rfc3164", "rfc5424"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
]

[project.scripts]
syslog-fwd = "syslog_fwd.cli:main"

[project.urls]
Homepage = "https://github.com/brun_s/syslog-forwarder"
Documentation = "https://github.com/brun_s/syslog-forwarder#readme"
Repository = "https://github.com/brun_s/syslog-forwarder.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/syslog_fwd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0.0",
    "httpx>=0.27.0",
]
